# rust-wechaty-getting-started

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  Cargo.toml  Makefile  README.md
examples/: ding_dong_bot.rs
